# ChangeLog for media-libs/netpbm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.179 2008/02/09 22:54:18 vapier Exp $

*netpbm-10.26.49 (28 Jan 2008)

  28 Jan 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.49.ebuild:
  Version bump.

*netpbm-10.26.48 (01 Jan 2008)

  01 Jan 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.48.ebuild:
  Version bump.

*netpbm-10.26.47 (08 Dec 2007)

  08 Dec 2007; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.47.ebuild:
  Version bump.

  02 Nov 2007; Steve Dibb <beandog@gentoo.org> netpbm-10.40.0.ebuild:
  amd64 stable, bug 195698

  20 Oct 2007; Raúl Porcel <armin76@gentoo.org> netpbm-10.40.0.ebuild:
  alpha/ia64/sparc stable wrt #195698

  15 Oct 2007; Jeroen Roovers <jer@gentoo.org> netpbm-10.40.0.ebuild:
  Stable for HPPA (bug #195698).

  14 Oct 2007; Markus Rothe <corsair@gentoo.org> netpbm-10.40.0.ebuild:
  Stable on ppc64; bug #195698

  13 Oct 2007; nixnut <nixnut@gentoo.org> netpbm-10.40.0.ebuild:
  Stable on ppc wrt bug 195698

  13 Oct 2007; Dawid Węgliński <cla@gentoo.org> netpbm-10.40.0.ebuild:
  Stable on x86 (bug #195698)

*netpbm-10.26.46 (13 Oct 2007)

  13 Oct 2007; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.46.ebuild:
  Version bump.

*netpbm-10.40.0 (28 Sep 2007)

  28 Sep 2007; Mike Frysinger <vapier@gentoo.org> +netpbm-10.40.0.ebuild:
  Version bump.

*netpbm-10.26.45 (28 Sep 2007)

  28 Sep 2007; Mike Frysinger <vapier@gentoo.org>
  +files/netpbm-10.26.45-headers.patch, +netpbm-10.26.45.ebuild:
  Version bump.

*netpbm-10.26.44 (10 Jul 2007)

  10 Jul 2007; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.44.ebuild:
  Version bump.

*netpbm-10.39.0 (26 Jun 2007)

  26 Jun 2007; Mike Frysinger <vapier@gentoo.org> +netpbm-10.39.0.ebuild:
  Version bump.

*netpbm-10.26.43 (26 Jun 2007)

  26 Jun 2007; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.43.ebuild:
  Version bump.
