@@ -10,15 +10,17 @@ DIST netpbm-10.30-manpages.tar.bz2 233254 RMD160 6312e1486f473f57332a5dc050a03ac
 DIST netpbm-10.33-manpages.tar.bz2 236722 RMD160 5e43836a5f4d16f1ba5ece21e9996dbe60b252ae SHA1 6c0372f540ad040771beae15a8c2015252679e5f SHA256 aa18adee4a187ad5df243cb1a7c51097dc6a7d6a8072cf6da09972b74ac5454a
 DIST netpbm-10.37.0.tar.bz2 2097635 RMD160 240759eebb9eb7619019d55fdd5fcf7f548f6512 SHA1 73ac4325930d6d0a3779f33879e8bbf0402c4e9b SHA256 5107920e6adbecc0511f5d7c24224abc98b5872a6ce48074537314ecd83a7952
 DIST netpbm-10.40.0.tar.bz2 2126805 RMD160 17057c1bb90c90080a83726a60cc69fa0084022b SHA1 2b4c1346e142d7310f266918702121198d10f5dd SHA256 b30e71386211d6e144706c673ede113dcf11f5b481abd5836285b021800e33c7
+DIST netpbm-10.41.0.tar.lzma 1859778 RMD160 13ce996b6edbcd8602fc830a1796138cfc46cdb5 SHA1 51b1abb41059b342c4a6db2224728aaf5aa20c19 SHA256 88974be8cb7fe2df15e742663855239ab8d9a7476c864b6b6a2d5a8fcf08a92d
 EBUILD netpbm-10.26.49.ebuild 2888 RMD160 ece9dbeadc7ac34c8c21b865d2faae7c84b7ff96 SHA1 08aa56d44f2b15168c4158c589a63e4c832ed678 SHA256 229ff0299c0d45350b69b08d7e841dd1e77aced7f2ca09fec0bd3cd20160e338
 EBUILD netpbm-10.37.0.ebuild 3176 RMD160 c845bcb06d679218d0c5f1ad803c9cd879ad3410 SHA1 e5582dce796933d3a4049a07befaf3aeac9628a0 SHA256 5f273a533588bd933701d2e3efabc034701a9c1e01085a7d810646f2f07676b6
 EBUILD netpbm-10.40.0.ebuild 3176 RMD160 f55a7bb26a9e77fca095583dda37c289a27aa865 SHA1 781af81b8116958b6a3cdec4a14c9ec5b9c43e87 SHA256 1d2aa91e2ce566a2129541b4a545164ea70b40784b9054062ba2bd8fb8c49bf7
-MISC ChangeLog 24267 RMD160 03ac7b6d99c0717880f3d664b5f79f0dbd51efaa SHA1 2f3588b15fc00ffce0ae9f2c538006c2a5a5e80c SHA256 49f575d9a9ab22af09c3fe9312c563713e4f3bb318973862c671acc779563f2a
+EBUILD netpbm-10.41.0.ebuild 3895 RMD160 5af5761cbcd2a2a768815de806fa802308376097 SHA1 43535f2c62f7c5a0d73b7f0fbd6dc2a197dd5a08 SHA256 793fe4469f307815882a9bac9822fbd35b0ecace147cc95cdb179d2c68692908
+MISC ChangeLog 24389 RMD160 aa11e39f3b27c9b2f96b9c63a368064051efbd2c SHA1 9e71e967bc579f76e03e62c3569b8e3ce9a3789c SHA256 e807580dbb7d753f58b7df06d362f8c9e797791b7cf4dec76ecd65ca3822c342
 MISC metadata.xml 161 RMD160 60f70b15d67f0e6aafc59833b2f0a30e30b51765 SHA1 1c35398222ef7ed670c31965e42cca77fe4b1da6 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHri8gj9hvisErhMIRAh64AKDWkUdVOpeFYi48b2OtxiaQU0NJ2gCfTvRo
-rO4+5GKOFZgVhdtqulCJ46k=
-=hsn+
+iD8DBQFHrjRdj9hvisErhMIRAoWDAKDe30sSUUrL4J2h/+/8BuCjDiWAhwCghOWQ
+UkVGnN3qQtXJXzaWAMyN1zc=
+=e6gq
 -----END PGP SIGNATURE-----
