@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/netpbm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.179 2008/02/09 22:54:18 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.180 2008/02/09 23:16:39 vapier Exp $
+
+*netpbm-10.41.0 (09 Feb 2008)
+
+  09 Feb 2008; Mike Frysinger <vapier@gentoo.org> +netpbm-10.41.0.ebuild:
+  Version bump.
 
 *netpbm-10.26.49 (28 Jan 2008)
 
